deploy/website.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - image: gcr.io/soy-reporter-177713/boris-website:latest
          name: website
          ports:
            - containerPort: 8001
              name: caddy
